--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,14 @@ pandas
 matplotlib
 seaborn
 scikit-learn
-tensorflow
-mlflow
+
+# Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
+tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
+tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
+tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
+
+google-cloud-bigquery
+google-cloud-storage
+mlflow==2.1.1
+glob2
+keras
