--- a/tweet_911/Makefile
+++ b/tweet_911/Makefile
@@ -47,6 +47,16 @@ load_model:
 	@python -c 'from registry import load_model; load_model()'
 
 
+reset_local_files:
+	rm -rf ${ML_DIR}
+	mkdir -p ~/.lewagon/mlops/data/
+	mkdir ~/.lewagon/mlops/data/raw
+	mkdir ~/.lewagon/mlops/data/processed
+	mkdir ~/.lewagon/mlops/training_outputs
+	mkdir ~/.lewagon/mlops/training_outputs/metrics
+	mkdir ~/.lewagon/mlops/training_outputs/models
+	mkdir ~/.lewagon/mlops/training_outputs/params
+
 #API
 
 run_api:
