update model, architecture, train function in main, utils file

--- a/tweet_911/Makefile
+++ b/tweet_911/Makefile
@@ -46,6 +46,8 @@ save_model:
 load_model:
 	@python -c 'from registry import load_model; load_model()'
 
+train_model:
+	@python -c 'from main import train; train()'
 
 #API
 
